Fix overlapping services and works

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -40,6 +40,7 @@ body, html {
 
 body.heroic main {
   padding-bottom: 0;
+  overflow-x: hidden;
 }
 
 main {
